Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4
-
None
Description
In mtr_t::page_flush_ahead log_close(), InnoDB should print the warning message
saying "Shutdown is in progress" only when srv_shutdown_state > SRV_SHUTDOWN_INITIATED
state.
Attachments
Issue Links
- is duplicated by
-
MDEV-34174 mtr_t::log_close() warning should change the shutdown condition
-
- Closed
-