MDEV-34175 mtr_t::log_close() warning should change the shutdown condition

- InnoDB should print the warning message saying
"Shutdown is in progress" only when shutdown state
is greater than SRV_SHUTDOWN_INITIATED.