storage/innobase/mtr/mtr0mtr.cc
@@ -925,7 +925,7 @@ static mtr_t::page_flush_ahead log_close(lsn_t lsn)
                       " last checkpoint LSN=" LSN_PF ", current LSN=" LSN_PF
                       "%s.",
                       lsn_t{log_sys.last_checkpoint_lsn}, lsn,
-                      srv_shutdown_state != SRV_SHUTDOWN_INITIATED
+                      srv_shutdown_state > SRV_SHUTDOWN_INITIATED
                       ? ". Shutdown is in progress" : "");
     }
   }
